Fixed inverted logo to blog.html, removed scrollbar

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -335,3 +335,6 @@ p {
 }
 
 
+::-webkit-scrollbar {
+    display: none;
+}
